# Wrkmon-TUI-Youtube

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
packaging/chocolatey/: wrkmon.1.0.0.nupkg  wrkmon.1.0.1.nupkg  wrkmon.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
packaging/debian/debian/: control
packaging/homebrew/: wrkmon.rb
packaging/snap/: snapcraft.yaml
tests/: __init__.py  test_downloader.py  test_lyrics.py  test_migrations.py  test_playlist_io.py  test_retry.py  test_sleep_timer.py
wrkmon/: __init__.py  app.py  cli.py
wrkmon/core/: downloader.py  lyrics.py  media_keys.py  player.py  playlist_io.py  queue.py  sleep_timer.py  youtube.py
wrkmon/data/: database.py  migrations.py
wrkmon/ui/: messages.py  theme.py
wrkmon/ui/screens/: focus.py  help.py  lyrics.py  playlist_selector.py  theme_picker.py
wrkmon/ui/views/: __init__.py  history.py  playlists.py  queue.py  search.py
wrkmon/ui/widgets/: __init__.py  header.py  player_bar.py  result_item.py  thumbnail.py
wrkmon/utils/: ascii_art.py  config.py  mpv_installer.py  notifications.py  retry.py  updater.py
