[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wrkmon"
version = "1.0.0"
description = "Work Monitor - A developer productivity tool"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Developer", email = "dev@example.com" }
]
keywords = ["monitor", "productivity", "cli", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "textual>=0.50.0",
    "typer>=0.9.0",
    "yt-dlp>=2024.0.0",
    "python-mpv-jsonipc>=1.2.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
wrkmon = "wrkmon.cli:app"

[project.urls]
Homepage = "https://github.com/example/wrkmon"
Documentation = "https://github.com/example/wrkmon#readme"
Repository = "https://github.com/example/wrkmon"

[tool.hatch.build.targets.wheel]
packages = ["wrkmon"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
